--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+---
+layout: default
+title: Home
+---
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>https://chuacheowhuan.github.io/</h1>
+    <p>
+      <p>
+        Welcome.
+      </p>
+        2019-03-19:
+        <br>
+        I'm pretty much done with exploring the various valued based
+        reinforcement learning algorithms & have put together some codes on the
+        commonly seen DQN variants in my public repo.
+        </br>
+      </p>
+      <p>
+
+      </p>
+    </p>
+  </body>
+</html>
