Added Github repo link to homepage.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@ title: Home
         </br>
       </p>
       <p>
-
       </p>
     </p>
   </body>
 </html>
+
+
+<a href="https://github.com/ChuaCheowHuan"> My Github repositories </a>
