--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: 
+title:
 
 header:
       #image: /assets/images/foggy.jpg
@@ -13,8 +13,8 @@ header:
   {% for post in site.posts %}
     <li>
       <!-- <h2><a href="{{ post.url }}">{{ post.title }}</a></h2> -->
-      <h2><a href="{{ post.url }}">{{ post.excerpt }}</a></h2>
-      <!-- <p>{{ post.excerpt }}</p> -->
+      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
 </ul>
