index quote added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@ header:
       #overlay_image: /assets/images/foggy.jpg
       #overlay_filter: 0.1
 ---
-
+<br>
+"Do not worry about your difficulties in Mathematics.
+<br>
+ I can assure you mine are still greater." - Albert Einstein
+ <br>
+ 
 <!doctype html>
 <html>
   <head>
@@ -16,7 +21,8 @@ header:
     <title>Home</title>
   </head>
   <body>
-    <h1></h1>
+    <h1>
+    </h1>
     <p>
     </p>
   </body>
