--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@ header:
 <br>
 "Do not worry about your difficulties in Mathematics.
 <br>
- I can assure you mine are still greater." - Albert Einstein
+ I can assure you mine are still greater."
  <br>
- 
+ - Albert Einstein
+
 <!doctype html>
 <html>
   <head>
