--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,11 @@ header:
       overlay_filter: 0.1
 ---
 
-<h1>Latest Posts</h1>
+<h1>
+
+</h1>
+
+“Adventure is worthwhile.” – Aristotle
 
 <ul>
   {% for post in site.posts %}
@@ -21,5 +25,6 @@ header:
 </ul>
 
 <br>
+“Never memorize something that you can look up.”
 <br>
-<br>
+― Albert Einstein
