new post A3C thread

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ title:
 author_profile: true
 
 header:
-      image: /assets/images/robot_board_light_crop.jpg
+      image: /assets/images/go_game_crop.jpeg
+      #image: /assets/images/robot_board_light_crop.jpg
       #overlay_image: /assets/images/foggy.jpg
       #overlay_filter: 0.1
 ---
