--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title:
 author_profile: true
 
 header:
-      image: /assets/images/go_game_crop.jpeg
+      image: /assets/images/rsz_go_game_crop.jpg
       #image: /assets/images/robot_board_light_crop.jpg
       #overlay_image: /assets/images/foggy.jpg
       #overlay_filter: 0.1
