--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ header:
     <h1>
     </h1>
     <p>
-      <div>
+      <div class="tip" markdown="1">
 
-      222
+      3
         # Reinforcement learning
 
         This repository contains codes that I have reproduced for various RL algorithms. The codes were tested on Colab.
@@ -50,7 +50,13 @@ header:
         <sup><sup>(1): GAE used for computation of TD lambda return (for critic's target) & policy's advantage.</sup></sup><br>
         <sup><sup>(3): Distributed Tensorflow & Python's multiprocessing package used.</sup></sup><br>
 
-      </div>      
+      </div>
     </p>
   </body>
 </html>
+
+<div>
+
+*Emphasized* text.
+
+</div>
