test md in html index file

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@ header:
         <sup><sup>(3): Distributed Tensorflow & Python's multiprocessing package used.</sup></sup><br>
 
       </div>
+
+      <div class="blog-post">
+        <div></div>
+
+          ## Test heading
+            a paragraph.
+              ## second heading
+                another paragraph
+
+      </div>
+
     </p>
   </body>
 </html>
