--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@ title:
 
 header:
       #image: /assets/images/foggy.jpg
-      overlay_image: /assets/images/foggy.jpg
-      overlay_filter: 0.1
+      #overlay_image: /assets/images/foggy.jpg
+      #overlay_filter: 0.1
 ---
 
 <h1>
@@ -19,3 +19,5 @@ header:
     </li>
   {% endfor %}
 </ul>
+
+<br>
