--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 layout: home
-title: Reinforcement learning
+title:
 author_profile: true
 
 header:
-      image: /assets/images/rsz_go_game_crop.jpg
+      #image: /assets/images/rsz_go_game_crop.jpg
       #image: /assets/images/robot_board_light_crop.jpg
+      #image: /assets/images/ai_evolve.png
       #overlay_image: /assets/images/foggy.jpg
       #overlay_filter: 0.1
 ---
@@ -20,6 +21,14 @@ header:
     <h1>
     </h1>
     <p>
+      This site documents my codes in my Github repositories.
+      <br>
+      Mostly machine learning & reinforcement learning related.
+      <br><br>
+      Checkout my Github <a href="https://github.com/ChuaCheowHuan">here</a>.
+      <br>
     </p>
   </body>
 </html>
+
+<br>
