--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@ header:
     <h1>
     </h1>
     <p>
-      This site documents my codes in my Github repositories.
+      This site contains information/documentation for my codes in my Github
+      repositories.
       <br>
-      Mostly machine learning & reinforcement learning related.
-      <br><br>
+      Mainly covers machine learning & reinforcement learning.
+      <br>
+      And also CI/CD web development.
+      <br>
       Checkout my Github <a href="https://github.com/ChuaCheowHuan">here</a>.
       <br>
     </p>
