--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ header:
       This site contains information/documentation for my codes in my Github
       repositories.
       <br>
-      Mainly covers machine learning & reinforcement learning.
       <br>
-      And also CI/CD web development.
+      Mainly covers machine learning, reinforcement learning & CI/CD web development.
+      <br>
       <br>
       Checkout my Github <a href="https://github.com/ChuaCheowHuan">here</a>.
       <br>
