--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ header:
     </h1>
     <p>
       This site contains information/documentation for my codes in my Github
-      repositories.
+      repositories & my notes from self-learning various topics.
       <br>
       <br>
       Mainly covers machine learning, reinforcement learning & CI/CD web development.
