--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@ header:
       repositories & my notes from self-learning various topics.
       <br>
       <br>
-      Mainly covers machine learning, reinforcement learning & CI/CD web development.
+      Mainly contains stuff related to
+      machine learning,
+      market microstructure,
+      CI/CD web development
+      & stuff with not so trivial details that I will most probably forget
+      over time.
       <br>
       <br>
       Checkout my Github <a href="https://github.com/ChuaCheowHuan">here</a>.
