--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ header:
       over time.
       <br>
       <br>
-      Checkout my Github <a href="https://github.com/ChuaCheowHuan">here</a>.
+      Checkout <a href="https://github.com/ChuaCheowHuan">my Github</a>.
       <br>
     </p>
   </body>
